# cast-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  README.zh.md  SECURITY.md  TODOS.md  _config.yml  pyproject.toml
.context/retros/: 2026-03-22-1.json
.github/workflows/: deploy-website.yml  devsecops.yml  pr-preview-cleanup.yml  pr-preview.yml  publish.yml  release-drafter.yml
dashboard/: generate.py  template.html
docs/: cli-reference.md  dashboard-guide.md  getting-started.md  gitlab-guide.html  gitlab-guide.md  pipeline-reference.md  plugin-guide.md  policy-reference.md
docs/zh/: cli-reference.md  dashboard-guide.md  getting-started.md  gitlab-guide.md  pipeline-reference.md  plugin-guide.md  policy-reference.md
policy/: default.rego  permissive.rego  strict.rego
pr-2/: index.html
pr-2/docs/: cli-reference.html  dashboard-guide.html  plugin-guide.html
pr-8/: index.html
pr-8/docs/: getting-started.html  pipeline-reference.html  policy-reference.html
pr-8/zh/: index.html
scripts/: build_docs.py  check-template-sync.sh
src/cast_cli/: __init__.py  detect.py  install.py  main.py
templates/github/: publish-dashboard.yml
templates/go/: devsecops.yml
templates/nodejs/: devsecops.yml
templates/python/: devsecops.yml
tests/: test_cli.py  test_dashboard.py  test_detect.py  test_install.py  test_validate.py
website/: index.html
website/docs/: cli-reference.html  dashboard-guide.html  getting-started.html  gitlab-guide.html  pipeline-reference.html  plugin-guide.html  (+1 more)
zh/: index.html
(+23 files in other folders)
