[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cast-cli"
dynamic = ["version"]
description = "CAST — CI/CD Automation & Security Toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
cast = "cast_cli.main:app"

[project.urls]
Homepage = "https://github.com/castops/cast"
Repository = "https://github.com/castops/cast"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cast_cli.templates" = ["**/*.yml"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
